# server

./: .gitignore  Cargo.toml  Dockerfile  diesel.toml
migrations/2024-03-04-023240_create_graphs/: down.sql  up.sql
migrations/2024-03-04-185100_use_uuid/: down.sql  up.sql
migrations/2024-03-05-184712_consolidate/: down.sql  up.sql
migrations/2024-03-06-022510_desolidate/: up.sql
migrations/2024-03-06-024131_drop_resource_offset/: up.sql
migrations/2024-03-07-144454_add_subject/: down.sql  up.sql
migrations/2024-03-07-153533_add_description/: up.sql
migrations/2024-03-07-185528_add_progress/: down.sql  up.sql
migrations/2024-03-14-181228_update_graph_structure/: up.sql
migrations/2024-03-18-201720_topic_graph_and_extensions/: down.sql  up.sql
migrations/2024-03-28-235100_topic_content_json/: down.sql  up.sql
migrations/2024-03-29-002153_requirement_attach_graph_id/: down.sql  up.sql
migrations/2024-03-29-214418_integrate_users/: up.sql
migrations/2024-04-06-021322_create_objectives/: up.sql
migrations/2024-04-06-143747_check_graph_ownership/: up.sql
migrations/2024-04-10-024109_objective_requirement_and_timestamps/: up.sql
migrations/2024-04-14-171404_search_columns/: down.sql  up.sql
migrations/2024-04-15-045430_requirement_bigserial/: up.sql
migrations/2024-04-15-191956_update_progress/: down.sql  up.sql
migrations/2024-04-17-205045_graph_likes/: down.sql  up.sql
migrations/2024-05-16-232327_fix_like_trigger/: up.sql
migrations/2024-05-21-165212_objectives_notifications_and_learning_maps/: down.sql  up.sql
src/: main.rs
(+29 files in other folders)
