[package]
name = "deductio"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.114"

[dependencies.diesel]
version = "2.1.4"
features = ["uuid"]

[dependencies.rocket]
version = "0.5.0"
features = ["json", "uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_postgres"]

[dependencies.uuid]
version = "1.7.0"
features = ["v4"]
