[package]
name = "deductio"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.114"
diesel_migrations = "2.1.0"
diesel_async_migrations = "0.12.0"
diesel_full_text_search = "2.1.1"
rocket_oauth2 = "0.5.0"

[dependencies.diesel]
version = "2.1.4"
features = ["uuid", "serde_json"]

[dependencies.reqwest]
version = "0.12.2"
features = ["json"]

[dependencies.rocket]
version = "0.5.0"
features = ["json", "uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_postgres"]

[dependencies.uuid]
version = "1.7.0"
features = ["v4"]
